Some buttons didnt want to be pressed so this can fix that

--- a/Website3/index.html
+++ b/Website3/index.html
@@ -33,7 +33,7 @@
           <tr>
             <td colspan="2" onclick="digitBtnPressed(0)"> 0 </td>
 
-            <td onclick="btnACPressed">AC</td>
+            <td onclick="btnACPressed()">AC</td>
             <td onclick="operatorBtnPressed('/')">/</td>
           </tr>
           <tr>
