--- a/Website3/index.html
+++ b/Website3/index.html
@@ -37,7 +37,7 @@
             <td onclick="operatorBtnPressed('/')">/</td>
           </tr>
           <tr>
-            <td colspan="4" onclick="equalsBtnPressed('=')"> = </td>
+            <td colspan="4" onclick="equalsBtnPressed()"> = </td>
           </tr>
         </table>
   
