--- a/Website3/index.html
+++ b/Website3/index.html
@@ -3,7 +3,7 @@
     My Calculator
   </title>
   <head>
-    
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
         <table border="1">
