Update and rename amhphitheatre.html to amphitheatre.html

--- a/Website2/amphitheatre.html
+++ b/Website2/amphitheatre.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <title>Pine City Zoo</title>
     </head>
     <body>
     <div id="header">
