--- a/Website2/places.html
+++ b/Website2/places.html
@@ -20,7 +20,7 @@
     </div>
     <div id="main">
     </div id="content">
-        <a class="info-box" href="amhphitheatre.html">
+        <a class="info-box" href="amphitheatre.html">
             <img class="right" src="images/next-arrow.png">
             <img src="images/amphitheatre-tn.png">
             <h3>AMPHITHEATRE</h3>
