--- a/Website4/index.html
+++ b/Website4/index.html
@@ -31,7 +31,7 @@
                 output += `
                 <tr>
                     <td>
-                        <img src="${rootPath}controller/uploads/${data[a].avatar}" width ="40px"/>        
+                        <img src="${rootPath}controller/uploads/${data[a].avatar}" width ="55"/>        
                     </td> 
                     <td>
                         <h5>${data[a].firstname}</h5>
