--- a/Website4/add-contact.html
+++ b/Website4/add-contact.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Contact</title>
+</head>
+<body>
+    <br/>
+    <form id="editForm">
+        <label for="firstname">First name:</label>
+        <input type="text" id="firstname" name="firstname" required>
+        <br/>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <br/>
+        <button type="submit">Add Contact</button>
+</body>
+</html>
