--- a/Website1/index.html
+++ b/Website1/index.html
@@ -15,7 +15,9 @@
         <button id="menu-toggle"> &#9776</button> <!-- This is a button element with an ID of "menu-toggle". The content inside the button is the HTML entity for a hamburger icon (three horizontal lines). -->
         <button id="close-sidebar">&times;</button> <!-- This is a button element with an ID of "close-sidebar". The content inside the button is the HTML entity for a multiplication sign (×), which is often used to represent a close or cancel action. -->
         <div class="logo">MYTUBE </div>
-    
+        <div class="search-bar">
+            <input type="text" placeholder="Search..."> <!-- This is an input field where users can type their search queries. The placeholder text "Search..." appears in the input field when it is empty, guiding users on what to do. -->
+            <button id="search-button">🔍</button> <!-- This is a button element with an ID of "search-button". The content inside the button is the HTML entity for a magnifying glass icon, commonly used to represent search functionality. -->
     </header>
     <div class="sidebar" id="sidebar">  
         <nav class="nav-links">
