--- a/Website1/index.html
+++ b/Website1/index.html
@@ -18,13 +18,17 @@
         <!-- <div class="search-bar">
             <input type="text" placeholder="Search..."> This is an input field where users can type their search queries. The placeholder text "Search..." appears in the input field when it is empty, guiding users on what to do. -->
         <!--    <button id="search-button">🔍</button>  This is a button element with an ID of "search-button". The content inside the button is the HTML entity for a magnifying glass icon, commonly used to represent search functionality. -->
+    
+    <!--Youtube  search API starts here-->
     <div id="buttons">
       <label> 
-        <input id="query" value='cats' type="text"/><button id="search-button" disabled onclick="search()">Search</button>
+        <input id="query" value=' ' type="text"/>
+        <button id="search-button" disabled onclick="search()">Search</button>
     </label>
     </div>
     <div id="search-container">
     </div>
+    <!--Youtube search API ends here-->
     </header>
     <div class="sidebar" id="sidebar">  
         <nav class="nav-links">
@@ -52,5 +56,6 @@
         <p>This is where the content goes</p>
     </div> 
 <script src="script.js"></script>
+<script src="search.js"></script>
 </body>
 </html>
