--- a/Website1/index.html
+++ b/Website1/index.html
@@ -56,6 +56,7 @@
         <p>This is where the content goes</p>
     </div> 
 <script src="script.js"></script>
-<script src="search.js"></script>
+<script src="search.js"></script>   <!--This is used to link the JavaScript file that contains the search functionality for the YouTube API. -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </body>
 </html>
