--- a/Website1/index.html
+++ b/Website1/index.html
@@ -58,5 +58,6 @@
 <script src="script.js"></script>
 <script src="search.js"></script>   <!--This is used to link the JavaScript file that contains the search functionality for the YouTube API. -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
 </body>
 </html>
