--- a/Website1/index.html
+++ b/Website1/index.html
@@ -2,11 +2,11 @@
 <html lang = "en"> <!-- “This document is written in English, and everything inside the <html> tag should be interpreted as HTML.” -->
 <html>
 <head> <!--Welcome to MyTube-->
-    <!-- <meta charset ="UTF-8"> <!-- <meta>: This is an HTML tag used to define metadata—information about the webpage that doesn’t appear on the page itself but helps browsers, search engines, and other systems understand how to handle the content.
+    <meta charset ="UTF-8">  <meta>: <!--This is an HTML tag used to define metadata—information about the webpage that doesn’t appear on the page itself but helps browsers, search engines, and other systems understand how to handle the content.
                                 charset="UTF-8": This attribute specifies the character encoding for the document. 
                                 "UTF-8" is one of the most widely used character encodings because it supports virtually all characters from different languages, special symbols, and emojis. It ensures that text is displayed correctly, preventing issues like garbled characters or unreadable symbols.
-                            
-    <meta name = "viewport" content ="width=device-width,initial-scale=1.0"> -->
+                                    -->
+    <meta name = "viewport" content ="width=device-width,initial-scale=1.0"> 
     <title> MYTUBE </title> 
     <link rel="Stylesheet" href="styles.css">
 </head>
